--- a/test/templates/test.html
+++ b/test/templates/test.html
@@ -1,7 +1,7 @@
 {% extends "modules\extends.html" %}
 {% block body %}
 {{message}}
-<form action="/welcome" method="post">
+<form action="/logon" method="post">
 用户名:<input type="text" name="user_name" /><br/>
 密码：<input type="password" name="user_password"/>
 <input type="submit" value="登陆" />
